// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders breadcrumbs correctly on error page 1`] = `
<div
  className="container mb-4"
>
  <nav>
    <ol
      className="breadcrumb"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Valtion väylien suunnittelu
        </a>
      </li>
      <li>
        <span
          className="font-bold"
        >
          Virhe
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs renders breadcrumbs correctly on mapped /tuntematon/polku/123/123 path 1`] = `
<div
  className="container mb-4"
>
  <nav>
    <ol
      className="breadcrumb"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Valtion väylien suunnittelu
        </a>
      </li>
      <li>
        <span
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          tuntematon
        </span>
      </li>
      <li>
        <span
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          polku
        </span>
      </li>
      <li>
        <span
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Testi nimi
        </span>
      </li>
      <li>
        <span
          className="font-bold"
        >
          Projektin muokkaaminen
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs renders breadcrumbs correctly on non-mapped /tuntematon/polku/123/123 path 1`] = `
<div
  className="container mb-4"
>
  <nav>
    <ol
      className="breadcrumb"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Valtion väylien suunnittelu
        </a>
      </li>
      <li>
        <span
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          tuntematon
        </span>
      </li>
      <li>
        <span
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          polku
        </span>
      </li>
      <li>
        <span
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          [sid]
        </span>
      </li>
      <li>
        <span
          className="font-bold"
        >
          [pid]
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs renders correctly on 'known' /yllapito/perusta path 1`] = `
<div
  className="container mb-4"
>
  <nav>
    <ol
      className="breadcrumb"
    >
      <li>
        <a
          href="/yllapito"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Valtion väylien suunnittelu
        </a>
      </li>
      <li>
        <span
          className="font-bold"
        >
          Projektin perustaminen
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
